Fix layerlist scrollbar for Windows/OS X native UI

--- a/app/components/editor/editor.less
+++ b/app/components/editor/editor.less
@@ -107,7 +107,7 @@
   .row-editor-content {
     position: absolute;
     top: 36px;
-    bottom: 0px;
+    bottom: 50px;
     right: 0px;
     left: 0px;
   }
@@ -145,6 +145,7 @@
   width: auto;
   position: relative;
   height: 100%;
+  width: 100%;
   z-index: 10;
   overflow: hidden;
 }
@@ -152,8 +153,9 @@
 
 }
 .style-editor {
-  padding-bottom: 108px;
+  padding-bottom: 57px;
   height: 100%;
+  width: 100%;
 }
 
 /* Resizer bar */
@@ -267,7 +269,6 @@
       display: inline-block;
     }
     .style-editor {
-       padding-bottom: 57px;
        position:absolute;
        display:block;
        width: 100%;
