--- a/app/components/editor/layerlist/layerlist.less
+++ b/app/components/editor/layerlist/layerlist.less
@@ -1,7 +1,6 @@
 /* layerlist.less */
 
 @import "../../../variables.less";
-
 .editor-layerlist {
   -webkit-transition: width 0.4s ease-in-out, max-width 0.4s ease-in-out, min-width 0.4s ease-in-out;
   -moz-transition:  width 0.4s ease-in-out, max-width 0.4s ease-in-out, min-width 0.4s ease-in-out;
@@ -18,14 +17,19 @@
 
   position: relative;
   float: left;
-  
 
   .reorder-info {
     font-size: 11px;
     color: @md-lt-gray;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    background-color: @gray;
+    padding-top: 8px;
+    padding-bottom: 12px;
     text-align: center;
+    box-shadow: inset -5px 0px 5px -3px @dark-gray;
+
+    position: absolute;
+    top: 0px;
+    display: table;
   }
 
   h6.title {
@@ -35,67 +39,85 @@
     margin-left: 5px;
   }
 
-  > ul {
-    height: 100%;
+  .layerlist-scroll {
     overflow-y: auto;
-    list-style-type: none;
-    margin-bottom: 0px;
+    overflow-x: hidden;
+    height: 100%;  
 
-    > li {
-      position: relative;
-      padding: 5px;
-      padding-right: 60px;
-      cursor: pointer;
-      border-top-left-radius: 2px;
-      border-bottom-left-radius: 2px;
-      margin-bottom: 5px;
-      background-color: @light-gray;
-      box-shadow: inset -5px 0px 5px -2px @dark-gray;
-      white-space: nowrap;
+    > ul {
+      padding-top: 36px;
+      list-style-type: none;
 
-      .map-layer-overlay {
-        visibility: hidden;
-        position: absolute;
-        height: 25px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        display: table;
-        font-size: 15px;
+      > li {
+        position: relative;
+        padding: 5px;
+        padding-right: 60px;
+        cursor: pointer;
+        border-top-left-radius: 2px;
+        border-bottom-left-radius: 2px;
+        margin-bottom: 5px;
+        background-color: @light-gray;
+        box-shadow: inset -5px 0px 5px -2px @dark-gray;
+        white-space: nowrap;
 
-        .icons {
-          height: 28px;
-          display: table-cell;
-          vertical-align: middle;
-          padding-right: 16px;
-          padding-left: 6px;
+        .map-layer-overlay {
+          visibility: hidden;
+          height: 25px;
+          position: absolute;
+          top: 0;
+          right: 0;
+          display: table;
+          font-size: 15px;
 
-          i {
-            padding: 0 3px;
-            &:hover {
-              transform: scale(1.3);
-              color: @monacoblue;
+          .icons {
+            height: 28px;
+            display: table-cell;
+            vertical-align: middle;
+            padding-right: 6px;
+            padding-left: 6px;
+
+            i {
+              padding: 0 3px;
+              &:hover {
+                transform: scale(1.3);
+                color: @monacoblue;
+              }
             }
           }
         }
+
       }
 
+      > li:hover {
+        background-color: @dark-gray;
+        color: white;
+        .map-layer {
+          overflow: hidden;
+        }
+        .map-layer-overlay {
+          visibility: visible;
+        }
+      }
+
+      > li.active {
+        background-color: @skyblue;
+        color: white;
+      }
     }
+  }
+}
 
-    > li:hover {
-      background-color: @dark-gray;
-      color: white;
-      .map-layer {
-        overflow: hidden;
+//Handle OSX transparent overlay scrollbar
+.editor-layerlist.osx {
+  .layerlist-scroll {
+    > ul {
+      > li {
+        .map-layer-overlay {
+          .icons {
+            padding-right: 16px;
+          }
+        }
       }
-      .map-layer-overlay {
-        visibility: visible;
-      }
-    }
-
-    > li.active {
-      background-color: @skyblue;
-      color: white;
     }
   }
 }
